kubernetes/main/apps/default/hass-proxy/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass-proxy
spec:
  annotations:
    external-dns.alpha.kubernetes.io/target: external.monosense.io
  ingressClassName: external
  rules:
    - host: &host ha.monosense.io
      http:
        paths:
          - backend:
              service:
                name: hass-proxy
                port:
                  name: http
            path: /
            pathType: Prefix
  tls: [hosts: [*host]]
